welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: type mismatch;
 found   : scala.collection.immutable.Nil.type
 required: Boolean
    case (false, false) => return Nil
                                  ^sleepIn:4: error: type mismatch;
 found   : scala.collection.immutable.Nil.type
 required: Boolean
    case (true, false) => return Nil
                                 ^