welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	(weekday, vacation) match {
    case (false, false) => return Nil
    case (true, false) => return Nil
  }
  
  if (!weekday || vacation)
  	return true
  else
  	return false
}